add 2 fixes to pytest-ansible challenge

--- a/content/modules/ROOT/pages/module-08.adoc
+++ b/content/modules/ROOT/pages/module-08.adoc
@@ -90,7 +90,7 @@ def test_cowsay_module(ansible_module):
 
 ----
 
-, *Now create the `conftest.py` file* with the following content:
+. *Now create the `conftest.py` file with the following content:*
 +
 [source,python]
 ----
