updates to nav and ui-config with proper file names

--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -1,11 +1,11 @@
 * xref:module-01.adoc[Workshop tips]
-* xref:module-02.adoc[Creating a collection with the Ansible extension for VS Code]
-* xref:module-03.adoc[Using Ansible dev environment]
-* xref:module-04.adoc[Adding a module to our collection]
-* xref:module-05.adoc[Testing our collection with Molecule]
-* xref:module-06.adoc[Creating an Execution Environment with ansible-builder]
-* xref:module-07.adoc[Introducing supply chain security with ansible-sign]
-* xref:module-08.adoc[Functional testing with pytest-ansible]
-* xref:module-10.adoc[What's next]
+* xref:module-02-collection.adoc[Creating a collection with the Ansible extension for VS Code]
+* xref:module-03-ade.adoc[Using Ansible dev environment]
+* xref:module-04-module.adoc[Adding a module to our collection]
+* xref:module-05-molecule.adoc[Testing our collection with Molecule]
+* xref:module-06-pytest.adoc[Functional testing with pytest-ansible]
+* xref:module-07-builder.adoc[Creating an Execution Environment with ansible-builder]
+* xref:module-08-sign.adoc[Introducing supply chain security with ansible-sign]
+* xref:module-10.adoc[What's next?]
 
 
