--- a/content/modules/ROOT/pages/module-03-ade.adoc
+++ b/content/modules/ROOT/pages/module-03-ade.adoc
@@ -115,23 +115,25 @@ adt --version
 Notice the command is `adt` (Ansible Development Tools). In the next task, you will use `ade` (Ansible Development Environment). These are different tools.
 ====
 +
-The output should look similar to this (**versions may differ**):
+The output should look similar to this:
 +
 [source,text]
 ----
 (.venv) [rhel@vscode mycollection]$ adt --version
 ansible-builder                          3.1.1
-ansible-core                             2.19.4
-ansible-creator                          25.11.0
-ansible-dev-environment                  25.11.0
-ansible-dev-tools                        25.11.0
-ansible-lint                             25.11.1
-ansible-navigator                        25.11.0
-ansible-sign                             0.1.3
-molecule                                 25.11.1
-pytest-ansible                           25.11.1
-tox-ansible                              25.11.1
+ansible-core                             2.19.5
+ansible-creator                          25.12.0
+ansible-dev-environment                  25.12.2
+ansible-dev-tools                        26.1.0
+ansible-lint                             26.1.1
+ansible-navigator                        26.1.1
+ansible-sign                             0.1.4
+molecule                                 25.12.0
+pytest-ansible                           25.12.0
+tox-ansible                              26.1.0
 ----
++
+NOTE: Versions might differ, don't worry. The list above is an example.
 
 === Task 4: Manage Dependencies with `ade`
 
